Correct strava entry spacing

--- a/source/stylesheets/live.scss
+++ b/source/stylesheets/live.scss
@@ -102,11 +102,11 @@
     font-weight: 300;
   }
 
-  .col-xs-9 {
+  .col-xs-8 {
     padding-left: 5px;
   }
 
-  .col-xs-3 {
+  .col-xs-4 {
     padding-right: 5px;
   }
 }
